force-app/main/default/objects/LeadConfiguration__c/LeadConfiguration__c.object-meta.xml
<CustomObject>
    <description
  >Object for string the configuration setting for calculating the lead scores of the application</description>
    <label>Lead Configuration</label>
    <nameField>
        <label>Lead Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>