force-app/main/default/objects/LeadConfiguration__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <description>Filter for lead configuration settings</description>
    <label>Filter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>