force-app/main/default/objects/LeadConfiguration__c/fields/LeadScore__c.field-meta.xml
<CustomField>
    <fullName>LeadScore__c</fullName>
    <description>Lead score for the lead configuration setting</description>
    <label>LeadScore</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>