force-app/main/default/objects/LeadConfiguration__c/fields/MaxValue__c.field-meta.xml
<CustomField>
    <fullName>MaxValue__c</fullName>
    <description>Maximum value for a lead configuration settings</description>
    <label>MaxValue</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>