force-app/main/default/objects/LeadConfiguration__c/fields/MinValue__c.field-meta.xml
<CustomField>
    <fullName>MinValue__c</fullName>
    <description>Minimum Value for the lead configuration settings</description>
    <label>MinValue</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>