force-app/main/default/objects/LeadConfiguration__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Field to store the type of lead configuration like eligibility, state names etc</description>
    <label>Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>