force-app/main/default/objects/LeadConfiguration__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value of the lead configuration setting</description>
    <label>Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>