force-app/main/default/objects/LeadConfiguration__c/fields/Weightage__c.field-meta.xml
<CustomField>
    <fullName>Weightage__c</fullName>
    <description>Maximum value for a lead configuration settings</description>
    <label>Weightage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>