force-app/main/default/objects/LeadConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>MinValue__c</columns>
    <columns>MaxValue__c</columns>
    <columns>Value__c</columns>
    <columns>Weightage__c</columns>
    <columns>LeadScore__c</columns>
    <columns>Filter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>